small naming fix

--- a/app/templates/seller_orders.html
+++ b/app/templates/seller_orders.html
@@ -48,7 +48,7 @@
           <select class="form-control" name="sort_type" id="sortType">
             <option value="order_id" {% if sort_type=='order_id' %}selected{% endif %}>Order ID</option>
             <option value="product_id" {% if sort_type=='product_id' %}selected{% endif %}>Product ID</option>
-            <option value="product_name" {% if sort_type=='product_name' %}selected{% endif %}>Product ID</option>
+            <option value="product_name" {% if sort_type=='product_name' %}selected{% endif %}>Product Name</option>
             <option value="quantity" {% if sort_type=='quantity' %}selected{% endif %}>Quantity</option>
             <option value="order_date" {% if sort_type=='order_date' %}selected{% endif %}>Order Date</option>
             <option value="buyer_name" {% if sort_type=='buyer_name' %}selected{% endif %}>Buyer Name</option>
