--- a/app/templates/order_details.html
+++ b/app/templates/order_details.html
@@ -18,7 +18,7 @@
       <th scope="col">Seller</th>
       <th scope="col">Fulfilled</th>
       <th scope="col">Fulfillment Time</th>
-      <th scope="col">Submit a Review</th>
+      <th scope="col">Submit a Seller Review</th>
     </tr>
   </thead>
   <!-- all details -->
